# duracloud-preserve

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  README_DEV.md  biome.json  main.tf  mise.toml  terraform.tfvars.example
.cargo/: audit.toml  config.toml
.github/workflows/: ci.yml  docs.yml  tf.yml
apputils/src/: lib.rs  stack.rs
awsutils/: Cargo.toml
awsutils/src/: bucket.rs  bucket_creator.rs  config.rs  file.rs  lib.rs  s3.rs  test_client.rs
awsutils/tests/: bucket_creator.rs
bucket-request/: Cargo.toml  README.md
bucket-request/events/: invalid_stack.json  sample.json  stack.json  valid_stack.json
bucket-request/src/: app.rs  event_handler.rs  main.rs
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: bucket_metrics.rs  bucket_reconciliation.rs  bucket_request.rs  checksum.rs  checksum_inventory.rs  checksum_report.rs  checksum_request.rs  compute_checksums.rs  generate_checksums.rs  inventory_report.rs  mod.rs  process_inventory.rs  reset.rs  setup.rs  storage_report.rs  sync_users.rs  transfer.rs  verify_checksums.rs
cli/src/commands/archive_it/: audit.rs  inventory.rs  mod.rs  sync.rs
cli/src/commands/task/: list.rs  mod.rs  run.rs
docs/: book.toml
docs/src/: README.md  SUMMARY.md  checksum-verification.md  features.md  lyrasis.md
docs/src/deploy/: production.md
docs/src/technical/: README.md  bucket-request.md  checksum-inventory.md  checksum-report.md  checksum-request.md  cleanup.md  cli-only.md  cli-reference.md  compute-checksums.md  development.md  functions.md  inventory-report.md  process-inventory.md  releases.md  storage-report.md  sync-users.md
docs/src/user/: README.md  connecting-to-s3.md  creating-buckets.md  downloading-content.md  external-documentation.md  making-content-public.md  managed-resources.md  query_audit_and_inventory_data.md  reports.md  uploading-files.md  users-groups.md  working-with-multiple-stacks.md
docs/theme/: duracloud.css
files/: audit.sql  batch-manifest.json  buckets-list.txt  buckets.txt  checksum-replication.csv  checksum-replication_crc64nvme.csv  checksum-source.csv  checksum-source_crc64nvme.csv  checksum-source_sha256.csv  example.parquet  inventory-manifest.json  inventory.sql  manifest.json
functions/bucket-request/: Cargo.toml
functions/bucket-request/events/: sample.json
functions/bucket-request/src/: app.rs  event_handler.rs  main.rs
functions/checksum-inventory/: Cargo.toml
functions/checksum-inventory/src/: event_handler.rs  main.rs
functions/checksum-report/: Cargo.toml
functions/checksum-report/events/: complete.json  empty-manifest.json  failed.json
functions/checksum-report/src/: event_handler.rs  main.rs
functions/checksum-request/: Cargo.toml
functions/checksum-request/events/: sample.json
functions/checksum-request/src/: event_handler.rs
functions/compute-checksums/: Cargo.toml
functions/compute-checksums/events/: sample.json
functions/compute-checksums/src/: event_handler.rs  main.rs
functions/inventory-report/: Cargo.toml
functions/inventory-report/events/: sample.json
functions/inventory-report/src/: event_handler.rs  main.rs
functions/process-inventory/: Cargo.toml
functions/process-inventory/src/: event_handler.rs
functions/storage-report/: Cargo.toml
functions/storage-report/events/: sample.json
functions/storage-report/src/: event_handler.rs  main.rs
functions/sync-users/: Cargo.toml
functions/sync-users/events/: sample.json
functions/sync-users/src/: event_handler.rs  main.rs
scripts/: bucket.mjs  bucket.sh  buckets.sh  create-replication-role.sh  docker.mjs  docs-pdf.mjs  env-run.mjs  event.mjs  gen-locals.mjs  gen-locals.sh  install.mjs  job-status.mjs  lib.mjs  package-duckdb-lambdas.mjs  publish.mjs  reset.sh  rmrf.mjs  set-managed-bucket-policy.sh  stage-duckdb-lib.mjs  teardown.sh  trigger-compute-checksums.sh  trigger-function.sh  trigger.mjs  upload.mjs
shared/app/: Cargo.toml
shared/app/src/: batch.rs  bucket.rs  checksum.rs  config.rs  errors.rs  helpers.rs  inventory.rs  lib.rs  reconcile.rs  sftpgo.rs  test_client.rs  upload.rs
shared/app/src/perform/: bucket_reconciliation.rs  bucket_request.rs  checksum_inventory.rs  checksum_report.rs  checksum_request.rs  compute_checksums.rs  errors.rs  inventory_report.rs  mod.rs  storage_report.rs  sync_users.rs
shared/app/tests/: bucket_discovery.rs  bucket_request.rs
shared/apputils/: Cargo.toml
shared/apputils/src/: bucket.rs  checksum.rs  content_type.rs  errors.rs  inventory.rs  lib.rs  stack.rs  stats.rs  storage.rs
shared/apputils/templates/: storage_report.html
shared/archive_it/: Cargo.toml
shared/archive_it/src/: errors.rs  lib.rs
shared/archive_it/src/audit/: classify.rs  expiration.rs  mod.rs
shared/archive_it/src/inventory/: cache.rs  mod.rs  row.rs
shared/archive_it/src/perform/: audit.rs  inventory.rs  mod.rs  sync.rs
shared/archive_it/src/sync/: counter.rs  driver.rs  mod.rs
shared/awsutils/: Cargo.toml
shared/awsutils/src/: batch.rs  bucket.rs  bucket_creator.rs  bucket_policy.rs  bucket_reconciliator.rs  bucket_request.rs  checksum.rs  checksum_report.rs  cloudwatch.rs  compute_checksums.rs  config.rs  cost_explorer.rs  errors.rs  file.rs  generate_checksums.rs  inventory.rs  inventory_report.rs  lib.rs  process_inventory.rs  test_client.rs  users.rs  verify_checksums.rs
shared/awsutils/src/bucket_reconciliator/: mod.rs  tests.rs
shared/awsutils/tests/: bucket.rs  bucket_creator.rs  bucket_request.rs
shared/awsutils/tests/common/: mod.rs
shared/base/: Cargo.toml
shared/base/src/: bucket.rs  checksum.rs  errors.rs  inventory.rs  lib.rs  stack.rs  stats.rs  storage.rs
shared/base/templates/: storage_report.html
shared/constants/: Cargo.toml
shared/constants/src/: lib.rs
shared/sftpgo/: Cargo.toml
shared/sftpgo/src/: lib.rs
shared/test-support/: Cargo.toml
shared/test-support/src/: lib.rs
terraform/modules/archive_it/: _locals.tf  main.tf  outputs.tf  variables.tf
terraform/modules/artifacts/: main.tf  variables.tf
terraform/modules/stack/: _locals.tf  (+27 more)
(+5 files in other folders)
