[workspace]
resolver = "3"
members = [
  "cli",
  "functions/bucket-request",
  "functions/checksum-request",
  "functions/checksum-report",
  "functions/compute-checksums",
  "functions/inventory-report",
  "functions/storage-report",
  "functions/sync-users",
  "shared/app",
  "shared/archive_it",
  "shared/awsutils",
  "shared/base",
  "shared/constants",
  "shared/sftpgo",
  "shared/test-support",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Internal
app = { path = "shared/app" }
archive_it = { path = "shared/archive_it" }
awsutils = { path = "shared/awsutils" }
base = { path = "shared/base" }
constants = { path = "shared/constants" }
sftpgo = { path = "shared/sftpgo" }
test-support = { path = "shared/test-support" }

# AWS
aws-config = "1.8.18"
aws-sdk-account = { version = "1.106.0", default-features = false, features = [
  "default-https-client",
  "rt-tokio",
] }
aws-sdk-cloudwatch = { version = "1.114.0", default-features = false, features = [
  "default-https-client",
  "rt-tokio",
] }
aws-sdk-cloudwatchlogs = { version = "1.141.0", default-features = false, features = [
  "default-https-client",
  "rt-tokio",
] }
aws-sdk-costexplorer = { version = "1.119.0", default-features = false, features = [
  "default-https-client",
  "rt-tokio",
] }
aws-sdk-ecs = { version = "1.134.0", default-features = false, features = [
  "default-https-client",
  "rt-tokio",
] }
aws-sdk-iam = { version = "1.112.0", default-features = false, features = [
  "default-https-client",
  "rt-tokio",
] }
aws-sdk-s3 = { version = "1.135.0", default-features = false, features = [
  "default-https-client",
  "http-1x",
  "rt-tokio",
  "sigv4a",
] }
aws-sdk-s3control = { version = "1.119.0", default-features = false, features = [
  "default-https-client",
  "rt-tokio",
] }
aws-sdk-scheduler = { version = "1.102.0", default-features = false, features = [
  "default-https-client",
  "rt-tokio",
] }
aws-sdk-ssm = { version = "1.112.0", default-features = false, features = [
  "default-https-client",
  "rt-tokio",
] }
aws-sdk-sts = { version = "1.105.0", default-features = false, features = [
  "default-https-client",
  "rt-tokio",
] }
aws-smithy-http-client = "1.1.13"
aws-smithy-runtime = "1.9.4"
aws-smithy-types = "1.4.8"
aws_lambda_events = { version = "1.2.0", default-features = false }
lambda_runtime = "1.2.1"

# Serialization
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

# Async
futures = "0.3.32"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }

# Web/HTTP
http = "1.4.1"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }

# Templating
askama = "0.16.0"

# Time
chrono = "0.4.45"

# Error handling
thiserror = "2.0.18"

# Misc
bytes = "1.11.0"
tempfile = "3"
tracing = "0.1"

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "z"
panic = "abort"
strip = "symbols"
