[package]
name = "awsutils"
version = "0.1.0"
edition = "2024"

[dependencies]
apputils = { path = "../apputils" }
aws-config = "1.8.11"
aws-sdk-iam = "1.101.0"
aws-sdk-s3 = "1.116.0"
aws-sdk-sts = "1.95.0"
aws-smithy-runtime = { version = "1.9.4", features = ["test-util"] }
aws-smithy-runtime-api = "1.9.2"
aws-smithy-types = "1.3.4"
http = "1.4.0"
serde_json = "1.0.145"
tokio = "1.48.0"
