[package]
name = "duracloud"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "duracloud"
path = "src/main.rs"

[dependencies]
app = { path = "../shared/app", features = ["duckdb"] }
apputils = { path = "../shared/apputils", features = ["duckdb"] }
awsutils = { path = "../shared/awsutils", features = ["duckdb"] }
aws-config = { version = "1.8", features = ["behavior-version-latest"] }
aws-sdk-iam = "1"
aws-sdk-s3 = "1.125.0"
aws-sdk-sts = "1"
base64 = "0.22.1"
clap = { version = "4", default-features = false, features = ["derive", "std"] }
chrono = "0.4.44"
crc-fast = "1"
rand = "0.10"
serde_json = "1"
shellexpand = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
