[package]
name = "duracloud"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "duracloud"
path = "src/main.rs"

[dependencies]
app = { workspace = true, features = ["duckdb"] }
base = { workspace = true, features = ["duckdb"] }
awsutils = { workspace = true, features = ["duckdb"] }
aws-config = { workspace = true, features = ["behavior-version-latest"] }
aws-sdk-iam.workspace = true
aws-sdk-s3.workspace = true
aws-sdk-sts.workspace = true
clap = { version = "4", default-features = false, features = ["derive", "error-context", "help", "std", "suggestions", "usage"] }
chrono.workspace = true
constants.workspace = true
crc-fast = "1"
serde_json.workspace = true
shellexpand = "3"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3"
