[package]
name = "dcp"
version.workspace = true
edition.workspace = true

[[bin]]
name = "dcp"
path = "src/main.rs"

[dependencies]
app = { workspace = true, features = ["duckdb"] }
archive_it.workspace = true
base = { workspace = true, features = ["duckdb"] }
awsutils = { workspace = true, features = ["duckdb"] }
aws-config = { workspace = true, features = ["behavior-version-latest"] }
aws-sdk-cloudwatch.workspace = true
aws-sdk-cloudwatchlogs.workspace = true
aws-sdk-ecs.workspace = true
aws-sdk-iam.workspace = true
aws-sdk-s3.workspace = true
aws-sdk-scheduler.workspace = true
aws-sdk-sts.workspace = true
clap = { version = "4", default-features = false, features = [
  "derive",
  "env",
  "error-context",
  "help",
  "std",
  "suggestions",
  "usage",
] }
chrono.workspace = true
constants.workspace = true
crc-fast = "1"
serde_json.workspace = true
shellexpand = "3"
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3"
