[package]
name = "checksum-report"
version = "0.1.0"
edition = "2024"

[dependencies]
apputils = { path = "../../shared/apputils/" }
aws_lambda_events = { version = "1.0.0", default-features = false, features = ["cloudwatch_events"] }
awsutils = { path = "../../shared/awsutils" }
lambda_runtime = "1.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["macros"] }
