[package]
name = "checksum-report"
version = "0.1.0"
edition = "2024"

[dependencies]
app = { path = "../../shared/app", features = ["duckdb"] }
apputils = { path = "../../shared/apputils/", features = ["duckdb"] }
aws_lambda_events = { version = "1.0.0", default-features = false, features = ["cloudwatch_events"] }
awsutils = { path = "../../shared/awsutils", features = ["duckdb"] }
lambda_runtime = "1.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["macros"] }

[dev-dependencies]
aws-config = "1.8.15"
test-support = { path = "../../shared/test-support" }
