[package]
name = "checksum-report"
version.workspace = true
edition.workspace = true

[dependencies]
app = { workspace = true, features = ["duckdb"] }
aws_lambda_events = { workspace = true, features = ["cloudwatch_events"] }
awsutils = { workspace = true, features = ["duckdb"] }
base = { workspace = true, features = ["duckdb"] }
lambda_runtime.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
aws-config.workspace = true
test-support.workspace = true
