[package]
name = "compute-checksums"
version = "0.1.0"
edition = "2024"

[dependencies]
app.workspace = true
apputils.workspace = true
aws_lambda_events = { workspace = true, features = ["cloudwatch_events"] }
awsutils.workspace = true
lambda_runtime.workspace = true
tokio.workspace = true

[dev-dependencies]
aws-config.workspace = true
test-support.workspace = true
