[package]
name = "compute-checksums"
version.workspace = true
edition.workspace = true

[dependencies]
app.workspace = true
aws_lambda_events = { workspace = true, features = ["cloudwatch_events"] }
awsutils.workspace = true
base.workspace = true
lambda_runtime.workspace = true
tokio.workspace = true

[dev-dependencies]
aws-config.workspace = true
test-support.workspace = true
