[package]
name = "inventory-report"
version = "0.1.0"
edition = "2024"

[dependencies]
app = { workspace = true, features = ["duckdb"] }
aws_lambda_events = { workspace = true, features = ["s3"] }
awsutils = { workspace = true, features = ["duckdb"] }
base = { workspace = true, features = ["duckdb"] }
lambda_runtime.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
aws-config.workspace = true
test-support.workspace = true
