[package]
name = "sync-users"
version.workspace = true
edition.workspace = true

[dependencies]
app.workspace = true
aws_lambda_events = { workspace = true, features = ["s3"] }
aws-sdk-s3.workspace = true
awsutils.workspace = true
base.workspace = true
constants.workspace = true
lambda_runtime.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
aws-config.workspace = true
test-support.workspace = true
