[package]
name = "app"
version.workspace = true
edition.workspace = true

[features]
duckdb = ["awsutils/duckdb", "base/duckdb"]

[dependencies]
askama.workspace = true
aws-config.workspace = true
aws-sdk-account.workspace = true
aws-sdk-iam.workspace = true
aws-sdk-s3.workspace = true
aws-sdk-s3control.workspace = true
aws-sdk-ssm.workspace = true
aws-sdk-sts.workspace = true
aws-smithy-types.workspace = true
awsutils.workspace = true
base.workspace = true
bytes.workspace = true
chrono.workspace = true
constants.workspace = true
csv.workspace = true
futures.workspace = true
reqwest.workspace = true
serde_json.workspace = true
sftpgo.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
test-support.workspace = true
