[package]
name = "apputils"
version = "0.1.0"
edition = "2024"

[features]
duckdb = ["dep:csv", "dep:duckdb"]

[dependencies]
askama = "0.15.4"
chrono = "0.4.44"
csv = { version = "1.4.0", optional = true }
duckdb = { version = "1.4", features = ["bundled", "json", "parquet"], optional = true }
humansize = "2.1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
