[package]
name = "apputils"
version = "0.1.0"
edition = "2024"

[features]
duckdb = ["dep:csv", "dep:duckdb"]

[dependencies]
askama.workspace = true
chrono.workspace = true
csv = { workspace = true, optional = true }
duckdb = { version = "1.10500", features = ["bundled", "json", "parquet"], optional = true }
humansize = "2.1.3"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
