[package]
name = "archive_it"
version.workspace = true
edition.workspace = true

[dependencies]
archive-it-client = "0.3.0"
aws-sdk-s3.workspace = true
aws-smithy-types.workspace = true
awsutils.workspace = true
base.workspace = true
chrono.workspace = true
csv.workspace = true
futures.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
