[package]
name = "awsutils"
version = "0.1.0"
edition = "2024"

[features]
duckdb = ["apputils/duckdb"]

[dependencies]
apputils = { path = "../apputils" }
aws-config = "1.8.14"
aws-sdk-iam = "1.105.0"
aws-sdk-s3 = "1.124.0"
aws-sdk-s3control = "1.111.0"
aws-sdk-sts = "1.96.0"
aws-smithy-types = "1.3.4"
bytes = "1.11.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.32"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
tempfile = "3"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"

[dev-dependencies]
aws-smithy-runtime = { version = "1.9.4", features = ["test-util"] }
http = "1.4.0"
test-support = { path = "../test-support" }
