[package]
name = "awsutils"
version = "0.1.0"
edition = "2024"

[features]
duckdb = ["apputils/duckdb"]

[dependencies]
apputils.workspace = true
aws-config.workspace = true
aws-sdk-iam.workspace = true
aws-sdk-s3.workspace = true
aws-sdk-s3control.workspace = true
aws-sdk-ssm.workspace = true
aws-sdk-sts.workspace = true
aws-smithy-types.workspace = true
bytes.workspace = true
chrono = { workspace = true, features = ["serde"] }
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
aws-smithy-runtime = { workspace = true, features = ["test-util"] }
http.workspace = true
test-support.workspace = true
