[package]
name = "awsutils"
version = "0.1.0"
edition = "2024"

[features]
duckdb = ["base/duckdb"]

[dependencies]
aws-config.workspace = true
aws-sdk-account.workspace = true
aws-sdk-iam.workspace = true
aws-sdk-s3.workspace = true
aws-sdk-s3control.workspace = true
aws-sdk-ssm.workspace = true
aws-sdk-sts.workspace = true
aws-smithy-types.workspace = true
base.workspace = true
bytes.workspace = true
chrono = { workspace = true, features = ["serde"] }
constants.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
http.workspace = true
test-support.workspace = true
