[package]
name = "base"
version.workspace = true
edition.workspace = true

[features]
duckdb = ["dep:csv", "dep:duckdb"]

[dependencies]
askama.workspace = true
base64 = "0.22.1"
chrono.workspace = true
constants.workspace = true
crc-fast = "1"
csv = { workspace = true, optional = true }
duckdb = { version = "1.10503", features = [
  "bundled",
  "json",
  "parquet",
], optional = true }
humansize = "2.1.3"
rand = "0.10"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
