[package]
name = "base"
version.workspace = true
edition.workspace = true

[features]
duckdb = ["dep:duckdb"]

[dependencies]
askama.workspace = true
base64 = "0.22.1"
chrono.workspace = true
constants.workspace = true
crc-fast = "1"
# No `bundled`/`json`/`parquet` features: DUCKDB_DOWNLOAD_LIB=1 (set in
# .cargo/config.toml) links the official prebuilt libduckdb instead of
# compiling DuckDB's C++ from source. Everything the SQL uses (read_parquet,
# read_csv, json_extract_string) is statically included in the official lib —
# verified: no extension autoload occurs. The binary dynamically links
# libduckdb, so deploy targets must ship the shared library (see Dockerfile /
# lambda build / scripts/install.mjs).
duckdb = { version = "1.10503", optional = true }
humansize = "2.1.3"
rand = "0.10"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
